--- a/src/Nzo/JaredBundle/Resources/views/layout.html.twig
+++ b/src/Nzo/JaredBundle/Resources/views/layout.html.twig
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %} Project - {% endblock title %}</title>
-
+        <!-- CSS -->
+        <link href="{{ asset('bundles/nzojared/css/bootstrap.css') }}" rel="stylesheet" media="screen">
+        <link href="{{ asset('bundles/nzojared/css/style.css') }}" rel="stylesheet" media="screen">
+        <link href="{{ asset('bundles/nzojared/css/bootstrap-responsive.css') }}" rel="stylesheet" media="screen">
+        <!--FONT-->
+        <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
        {% block head %}  {% endblock head %}
     </head>
     <body>
 
     {% block body %}
-
-        {% block content %}
-
-        {% endblock content %}
-
-        {% block footer %}
-        {% endblock footer %}
+        <div class="container">
+            <div class="row">
+              {% block content %}{% endblock content %}
+            </div>
+        </div>   
+        
+        {% block footer %}{% endblock footer %}
 
     {% endblock body %} 
+        
+    <!--JAVASCRIPT-->
+    <script src="{{ asset('bundles/nzojared/js/jquery-1.10.2.min.js') }}"></script>
+    <script src="{{ asset('bundles/nzojared/js/bootstrap.js') }}"></script>
     </body>
 </html>
