--- a/src/Nzo/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Security/login.html.twig
@@ -4,27 +4,38 @@
 {% block title %} {{ parent() }} - Login{% endblock %}
 
 {% block content %}
-    
-     <div class="main">
-            <form action="{{ path("fos_user_security_check") }}" method="post" class="box login">
-                <fieldset class="boxBody">
-                    <h2>Login</h2>
-                    {% if error %}
-                       <div class="validation">{{ error|trans({}, 'FOSUserBundle') }}</div>
-                    {% endif %}
-                    
-                    <label for="username">Login</label>	         
-                    <input type="text" name="_username" value="{{ last_username }}"/>
-                    <label for="password">Password</label>
-                    <input type="password" name="_password" />
-                    <a href="{{path('fos_user_resetting_request')}}">Forget Password ?</a>
-                </fieldset>
-                <footer>
-                    <label><input type="checkbox" id="remember_me" name="_remember_me" value="on" style="margin: 2px;"/>Remember me</label>
-                    <input type="submit" tabindex="4" name="_submit" value="Login" class="btnLogin">
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-                </footer>
-            </form>
+<div class="span12">
+    <div class="row">  
+       <div class="bg-login span3 offset4">
+           <form action="{{ path("fos_user_security_check") }}" method="post">
+               <fieldset>
+                   <legend class="colorlegend"><strong>Sign In</strong></legend>
+                   <h6 class="style_h">Sign in using your registered account:</h6> 
+                   {% if error %}
+                       <div class="alert alert-error text-center">{{ error|trans({}, 'FOSUserBundle') }}</div>
+                   {% endif %}
+                   <div class="input-prepend">
+                      <span class="add-on"><i class="icon-user"></i></span>
+                      <input type="text" name="_username" value="{{ last_username }}" required="required" placeholder="Username" class="input-large">
+                   </div>
+                   <div class="input-prepend">
+                      <span class="add-on"><i class="icon-lock"></i></span>
+                      <input type="password" type="password" name="_password" required="required" placeholder="Password" class="input-large">
+                   </div>
+                   <label class="style_h pull-left">
+                      <input type="checkbox" id="remember_me" name="_remember_me" value="on"/> Remember me
+                  </label>
+                  <input type="submit" value="Sign In" name="_submit" class="btn btn-primary pull-right">
+                  <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                  <div class="clearfix"></div>
+               </fieldset>
+           </form> 
+       </div>
     </div>
+</div>
+    <div style="padding: 4px 28px;" class="span3 offset4">
+       <h6 class="text-center style_h">Don't have an account? <a href="{{ path('fos_user_registration_register') }}" class="linklogin">Sign Up</a></h6>
+       <h6 class="text-center style_h"><a href="{{path('fos_user_resetting_request')}}" class="linklogin">Forgot your password?</a></h6>
+   </div>
     
 {% endblock content %}
