--- a/src/Nzo/JaredBundle/Resources/views/Users/index.html.twig
+++ b/src/Nzo/JaredBundle/Resources/views/Users/index.html.twig
@@ -9,7 +9,7 @@
 
 {% block content %}
 {% include "NzoUserBundle::connexion.html.twig" %}
-<br> welcome {{app.user.name}}
+<br> welcome {{app.user.username}}
 {% endblock content %}
 
 {% block footer %}
