--- a/src/Nzo/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -9,17 +9,20 @@
                         
                     
                         <label for="current">Mot de passe courante:</label>
-			{{ form_widget(form.current) }}
+            {{ form_widget(form.current_password) }}
+                        {% if form_errors(form.current_password)  %}
+                        <div class="validation"> {{form_errors(form.current_password)}} </div> 
+                        {% endif %}
 
                          <label for="first">Nouveau mot de passe:</label>
-		         {{ form_widget(form.new.first) }}
+                 {{ form_widget(form.plainPassword.first) }}
                          
-                         {% if form_errors(form.new)  %}
-                           <div class="validation"> {{form_errors(form.new)}} </div> 
+                         {% if form_errors(form.plainPassword.first)  %}
+                           <div class="validation"> {{form_errors(form.plainPassword.first)}} </div> 
                          {% endif %}
 
-                         <label for="second">Confirmer mot de passe:</label>	
-			 {{ form_widget(form.new.second) }}
+                         <label for="second">Confirmer mot de passe:</label>    
+             {{ form_widget(form.plainPassword.second) }}
 
                         {{ form_rest(form) }}
                         </fieldset>
