--- a/src/Nzo/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Profile/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends "NzoUserBundle::layout.html.twig" %}
+{% extends "NzoJaredBundle::layout.html.twig" %}
 
 
 {% block title %} {{ parent() }} - Edite Profil{% endblock %}
