--- a/src/Nzo/UserBundle/Resources/views/Profile/show.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Profile/show.html.twig
@@ -1,4 +1,4 @@
-{% extends "NzoUserBundle::layout.html.twig" %}
+{% extends "NzoJaredBundle::layout.html.twig" %}
 
 
 {% block title %} {{ parent() }} - Voir Profil{% endblock %}
