--- a/src/Nzo/UserBundle/Resources/views/connexion.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/connexion.html.twig
@@ -1,6 +1,6 @@
 
 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-<a href="{{ path('fos_user_profile_show') }}" class="login"> <span> {{ app.user.username }} </span> </a>
+{# <a href="{{ path('fos_user_profile_show') }}" class="login"> <span> {{ app.user.username }} </span> </a> #}
 <a href="{{ path('fos_user_security_logout') }}" class="login">
         <span> {{ 'layout.logout'|trans([], 'FOSUserBundle') }} </span>
      </a>
