--- a/src/Nzo/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -4,12 +4,12 @@
         <h6 class="style_h">Create a new account:</h6> 
         
         {% if(form_errors(form)) %}
-            <div class="error-input"> {{ form_errors(form) }} </div>
+            <div class="alert alert-error text-center"> {{ form_errors(form) }} </div>
         {% endif %}
         {#--Username---#}
         <div class="input-prepend">
             <span class="add-on"><i class="icon-user"></i></span>
-            {{ form_widget(form.username,{'attr': {'class': 'input-large','placeholder': 'Username'}}) }}
+            {{ form_widget(form.username,{'attr': {'class': 'span3','placeholder': 'Username'}}) }}
         </div>
         {% if(form_errors(form.username)) %}
           <div class="error-input">{{ form_errors(form.username) }}</div>
@@ -18,7 +18,7 @@
         {#--Email---#}
         <div class="input-prepend">
             <span class="add-on"><i class="icon-globe"></i></span>
-            {{ form_widget(form.email,{'attr': {'class': 'input-large','placeholder': 'E-mail'}}) }}
+            {{ form_widget(form.email,{'attr': {'class': 'span3','placeholder': 'E-mail'}}) }}
         </div>
         {% if(form_errors(form.email)) %}
           <div class="error-input">{{ form_errors(form.email) }}</div>
@@ -27,20 +27,16 @@
         {#--Password---#}
         <div class="input-prepend">
             <span class="add-on"><i class="icon-lock"></i></span>
-            {{ form_widget(form.plainPassword.first,{'attr': {'class': 'input-large','placeholder': 'Password'}}) }}                                      
+            {{ form_widget(form.plainPassword.first,{'attr': {'class': 'span3','placeholder': 'Password'}}) }}                                      
         </div>
         {#--Password Confirm---#}
         <div class="input-prepend">
             <span class="add-on"><i class="icon-lock"></i></span>
-            {{ form_widget(form.plainPassword.second,{'attr': {'class': 'input-large','placeholder': 'Password Confirmation'}}) }}
+            {{ form_widget(form.plainPassword.second,{'attr': {'class': 'span3','placeholder': 'Password Confirmation'}}) }}
         </div>
             {% if(form_errors(form.plainPassword.first)) %}
                 <div class="error-input">{{ form_errors(form.plainPassword.first) }}</div>
             {% endif %} 
-
-        
-       
-        
         {{ form_rest(form) }}
         <input type="submit" value="Sign Up" name="_submit" class="btn btn-primary pull-right">
     </fieldset>
