--- a/src/Nzo/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
@@ -4,11 +4,11 @@
 
 
 {% block content %}   
-     <div class="block">
-        <div class="confirm">
-            <p>{{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}</p>
-        </div>
-     </div>
+<div class="bg-login">
+    <div class="alert alert-info text-center">
+        {{ 'resetting.password_already_requested'|trans({}, 'FOSUserBundle') }}
+    </div>
+</div>
 {% endblock content %}
     
                                
