--- a/src/Nzo/UserBundle/Resources/views/Resetting/request_content.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Resetting/request_content.html.twig
@@ -1,20 +1,18 @@
-                        <form action="{{ path('fos_user_resetting_send_email') }}" method="post" class="box login">
-                       
-                        <fieldset class="boxBody">
-                            <h2>Mot de Passe oublié</h2>
-                        {% if invalid_username is defined %}
-                        <div class="validation">{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}, 'FOSUserBundle') }}</div>
-                        {% endif %}
-                        <div>
-                            <label for="username">{{ 'resetting.request.username'|trans({}, 'FOSUserBundle') }}:</label>
-                            <input type="text" name="username" value="" required="" class="">
-                        </div>
-                        
-                       
-                        </fieldset>
-                        <footer>
-                        
-                             <input type="submit" tabindex="4" name="submit" value="{{ 'resetting.request.submit'|trans({}, 'FOSUserBundle') }}" class="btnLogin" />
-                       
-                        </footer>
-                        </form>
+{% trans_default_domain 'FOSUserBundle' %}
+
+<form action="{{ path('fos_user_resetting_send_email') }}" method="post">
+    <fieldset>
+        <legend class="colorlegend"><strong>Forgot your Password?</strong></legend>  
+        {% if invalid_username is defined %}
+            <div class="alert alert-error text-center">{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}, 'FOSUserBundle') }}</div>
+        {% endif %}
+        <label for="username">Please Enter your {{ 'resetting.request.username'|trans({}, 'FOSUserBundle') }}:</label>
+        {#--Email Or Username--#}
+        <div class="input-prepend">
+            <span class="add-on"><i class="icon-user"></i></span>
+            <input type="text" name="username" required="" class="span3" placeholder="{{ 'resetting.request.username'|trans({}, 'FOSUserBundle') }}">
+        </div>
+    </fieldset>
+    <input type="submit" name="submit" value="{{ 'resetting.request.submit'|trans({}, 'FOSUserBundle') }}" class="btn btn-primary pull-right" />
+</form>
+
