--- a/src/Nzo/UserBundle/Resources/views/Resetting/reset_content.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Resetting/reset_content.html.twig
@@ -1,26 +1,29 @@
-
 <form action="{{ path('fos_user_resetting_reset', {'token': token}) }}"  {{ form_enctype(form) }} method="POST" class="box login">
-                         <fieldset class="boxBody">
-                        <h2>Revouveler votre mot de passe</h2>
-                        
-                        {% if form_errors(form)  %}
-                        <div class="validation-advice"> {{form_errors(form)}} </div> 
-                        {% endif %}        
+    <fieldset>
+        <legend class="colorlegend"><strong>New Password</strong></legend>
+        <h6 class="style_h">Please enter a new Password:</h6> 
+        {% if form_errors(form)  %}
+            <div class="alert alert-error text-center"> {{form_errors(form)}} </div> 
+        {% endif %}        
+	
+        {#--New Password---#}
+        <div class="input-prepend">
+            <span class="add-on"><i class="icon-lock"></i></span>
+            {{ form_widget(form.plainPassword.first,{'attr': {'class': 'span3','placeholder': 'New Password'}})}}
+        </div>
+            
+        {#--New Password Confirm---#}
+        <div class="input-prepend">
+            <span class="add-on"><i class="icon-lock"></i></span> 
+            {{ form_widget(form.plainPassword.second,{'attr': {'class': 'span3','placeholder': 'New Password Confirmation'}})}}
+        </div>
+            
+        {% if(form_errors(form.plainPassword.first)) %}
+            <div class="error-input">{{ form_errors(form.plainPassword.first) }}</div>
+        {% endif %} 
+
+        {{ form_rest(form) }}
+        <input type="submit" value="Edit Password" name="_submit" class="btn btn-primary pull-right">
+    </fieldset>
    
-                         {% if(form_errors(form.plainPassword.first)) %}
-                            <div class="error-input">{{ form_errors(form.plainPassword.first) }}</div>
-                        {% endif %} 
-                            
-                         <label for="first">Nouveau mot de passe:</label>	
-		         {{ form_widget(form.plainPassword.first)}}
-
-                         <label for="second">Confirmer mot de passe:</label>	
-			 {{ form_widget(form.plainPassword.second)}}
-
-                        {{ form_rest(form) }}
-                        </fieldset>
-                        <footer>
-                          <input type="submit" tabindex="4" name="_submit" value="Modifier" class="btnLogin">
-                        
-                        </footer>
-    </form>
+</form>
