--- a/src/Nzo/UserBundle/Resources/views/Registration/checkEmail.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Registration/checkEmail.html.twig
@@ -2,14 +2,12 @@
 
 {% block title %} {{ parent() }} Confirmation {% endblock %}
 
-
-
 {% block content %}   
-     <div class="block">
-        <div class="confirm">
-            <p>{{ 'registration.check_email'|trans({'%email%': user.email}, 'FOSUserBundle') }}</p>
-        </div>
-     </div>
+<div class="bg-login">
+    <div class="alert alert-info text-center">
+       {{ 'registration.check_email'|trans({'%email%': user.email}, 'FOSUserBundle') }}
+    </div>
+</div>
 {% endblock content %}
     
          
