--- a/src/Nzo/UserBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Registration/confirmed.html.twig
@@ -4,9 +4,9 @@
 
 
 {% block content %}   
-     <div class="block">
-        <div class="confirm">
-            <p>{{ 'registration.confirmed'|trans({'%username%': user.username}, 'FOSUserBundle') }}</p>
+<div class="bg-login">
+    <div class="alert alert-info text-center">
+           { 'registration.confirmed'|trans({'%username%': user.username}, 'FOSUserBundle') }}
                 {% if app.session is not empty %}
                     {% set targetUrl = app.session.get('_security.target_path') %}
                     {% if targetUrl is not empty %}<p><a href="{{ targetUrl }}">{{ 'registration.back'|trans({}, 'FOSUserBundle') }}</a></p>{% endif %}
