--- a/src/Nzo/UserBundle/Resources/views/Resetting/reset.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Resetting/reset.html.twig
@@ -1,13 +1,14 @@
 {% extends "NzoJaredBundle::layout.html.twig" %}
 
-
-{% block title %} {{ parent() }} - Mot de Passe Oublier{% endblock %}
-
+{% block title %} {{ parent() }} Forgot Password{% endblock %}
 
 {% block content %}
     
-     <div class="main">
-           {% include "NzoUserBundle:Resetting:reset_content.html.twig" %}
-    </div>
+<div class="bg-login">
+    {% include "NzoUserBundle:Resetting:reset_content.html.twig" %}
+</div>
+<div <div class="foot">
+    <h6 class="text-center style_h">Do you have an account? <a href="{{ path('fos_user_security_login') }}" class="linklogin">Sign In</a></h6>
+</div>
     
 {% endblock content %}
