--- a/src/Nzo/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Security/login.html.twig
@@ -1,12 +1,7 @@
 {% extends "NzoJaredBundle::layout.html.twig" %}
-
-
-{% block title %} {{ parent() }} - Login{% endblock %}
-
+{% block title %} {{ parent() }} Sign In{% endblock %}
 {% block content %}
-<div class="span12">
-    <div class="row">  
-       <div class="bg-login span3 offset4">
+   <div class="bg-login">
            <form action="{{ path("fos_user_security_check") }}" method="post">
                <fieldset>
                    <legend class="colorlegend"><strong>Sign In</strong></legend>
@@ -16,13 +11,13 @@
                    {% endif %}
                    <div class="input-prepend">
                       <span class="add-on"><i class="icon-user"></i></span>
-                      <input type="text" name="_username" value="{{ last_username }}" required="required" placeholder="Username" class="input-large">
+                      <input type="text" name="_username" value="{{ last_username }}" required="required" placeholder="Username" class="span3">
                    </div>
                    <div class="input-prepend">
                       <span class="add-on"><i class="icon-lock"></i></span>
-                      <input type="password" type="password" name="_password" required="required" placeholder="Password" class="input-large">
+                      <input type="password" type="password" name="_password" required="required" placeholder="Password" class="span3">
                    </div>
-                   <label class="style_h pull-left">
+                   <label class="style_h">
                       <input type="checkbox" id="remember_me" name="_remember_me" value="on"/> Remember me
                   </label>
                   <input type="submit" value="Sign In" name="_submit" class="btn btn-primary pull-right">
@@ -33,7 +28,7 @@
        </div>
     </div>
 </div>
-    <div style="padding: 4px 28px;" class="span3 offset4">
+   <div <div class="foot">
        <h6 class="text-center style_h">Don't have an account? <a href="{{ path('fos_user_registration_register') }}" class="linklogin">Sign Up</a></h6>
        <h6 class="text-center style_h"><a href="{{path('fos_user_resetting_request')}}" class="linklogin">Forgot your password?</a></h6>
    </div>
