--- a/web/bundles/nzojared/css/style.css
+++ b/web/bundles/nzojared/css/style.css
@@ -1,13 +1,18 @@
 .bg-login{
+    max-width: 300px;
     border: 1px solid #d5d5d5;
+    margin: 100px auto 20px;
     padding: 23px 28px;
     background: #f9f9f9;
     display: block;
-    margin: 100px auto 0 auto;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
     box-shadow: 0px 0px 2px #dadada, inset 0px -3px 0px #e6e6e6; 
+}
+.foot{
+    max-width: 300px;
+    margin: 0 auto 20px;
 }
 .style_h{color: dimGray;font-weight: normal;font-size: 13px;}
 .colorlegend{color: #2b83b6;}
