--- a/src/Nzo/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -2,11 +2,14 @@
     ? 'NzoJaredBundle::layoutUsers.html.twig' 
     : 'NzoJaredBundle::layoutAdmin.html.twig' %}
 
-
+{% block body %}
+        <div class="container">
+            <div class="row">
 {% block content %}
-    
-     <div class="main">
-           {% include "NzoUserBundle:ChangePassword:changePassword_content.html.twig" %}
-    </div>
-    
+                    <div class="bg-login" style="margin-top: 0;">
+    {% include "NzoUserBundle:ChangePassword:changePassword_content.html.twig" %}
+</div>
 {% endblock content %}
+                    </div>
+       </div>
+    {% endblock body %} 
