--- a/src/Nzo/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -1,32 +1,36 @@
+<form action="{{ path('fos_user_change_password') }}" method="post">
+    <fieldset>
+        <legend class="colorlegend"><strong>Change Your Password</strong></legend>
+        <h6 class="style_h">Please enter a new Password:</h6>
+        {% if form_errors(form)  %}
+            <div class="alert alert-error text-center"> {{form_errors(form)}} </div> 
+        {% endif %}
+        
+        {#--Current Password---#}
+        <div class="input-prepend">
+            <span class="add-on"><i class="icon-lock"></i></span>
+            {{ form_widget(form.current_password,{'attr': {'class': 'span3','placeholder': 'Current Password'}}) }}
+        </div>
+        
+        {% if form_errors(form.current_password) %}
+            <div class="error-input"> {{form_errors(form.current_password)}} </div> 
+        {% endif %}
+            
+        {#--New Password---#}
+        <div class="input-prepend">
+            <span class="add-on"><i class="icon-lock"></i></span>
+            {{ form_widget(form.plainPassword.first,{'attr': {'class': 'span3','placeholder': 'New Password'}}) }}
+        </div>            
+        {% if form_errors(form.plainPassword.first)  %}
+            <div class="error-input"> {{form_errors(form.plainPassword.first)}} </div> 
+        {% endif %}
 
-
-<form action="{{ path('fos_user_change_password') }}" method="post" class="box login">
-                            <fieldset class="boxBody">
-                         <h2>Changer votre mot de passe</h2>
-                        {% if form_errors(form)  %}
-                        <div class="validation"> {{form_errors(form)}} </div> 
-                        {% endif %}
-                        
-                    
-                        <label for="current">Mot de passe courante:</label>
-            {{ form_widget(form.current_password) }}
-                        {% if form_errors(form.current_password)  %}
-                        <div class="validation"> {{form_errors(form.current_password)}} </div> 
-                        {% endif %}
-
-                         <label for="first">Nouveau mot de passe:</label>
-                 {{ form_widget(form.plainPassword.first) }}
-                         
-                         {% if form_errors(form.plainPassword.first)  %}
-                           <div class="validation"> {{form_errors(form.plainPassword.first)}} </div> 
-                         {% endif %}
-
-                         <label for="second">Confirmer mot de passe:</label>    
-             {{ form_widget(form.plainPassword.second) }}
-
-                        {{ form_rest(form) }}
-                        </fieldset>
-                        <footer>                       
-                            <input style="width: 157px;" type="submit" tabindex="4" name="_submit" value="{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}" class="btnLogin">
-                        </footer>
-    </form>
+        {#--Confirmation New Password---#}
+        <div class="input-prepend">
+            <span class="add-on"><i class="icon-lock"></i></span>
+            {{ form_widget(form.plainPassword.second,{'attr': {'class': 'span3','placeholder': 'New Password Confirmation'}})}}
+        </div>
+        {{ form_rest(form) }}
+        <input type="submit" value="{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}" name="_submit" class="btn btn-primary pull-right">  
+    </fieldset>
+ </form>
