--- a/src/Nzo/UserBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/Nzo/UserBundle/Resources/views/Registration/confirmed.html.twig
@@ -6,7 +6,7 @@
 {% block content %}   
 <div class="bg-login">
     <div class="alert alert-info text-center">
-           { 'registration.confirmed'|trans({'%username%': user.username}, 'FOSUserBundle') }}
+           {{ 'registration.confirmed'|trans({'%username%': user.username}, 'FOSUserBundle') }}
                 {% if app.session is not empty %}
                     {% set targetUrl = app.session.get('_security.target_path') %}
                     {% if targetUrl is not empty %}<p><a href="{{ targetUrl }}">{{ 'registration.back'|trans({}, 'FOSUserBundle') }}</a></p>{% endif %}
