--- a/web/bundles/nzojared/css/bootstrap.css
+++ b/web/bundles/nzojared/css/bootstrap.css
@@ -3112,14 +3112,12 @@ table th[class*="span"],
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  border: 1px solid #d5d5d5;
+  background: #f9f9f9;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  box-shadow: 0px 0px 2px #dadada, inset 0px -3px 0px #e6e6e6; 
 }
 
 .well blockquote {
@@ -6116,13 +6114,13 @@ a.badge:focus {
 }
 
 .hero-unit {
-  padding: 60px;
+  padding: 107px;
   margin-bottom: 30px;
   font-size: 18px;
   font-weight: 200;
   line-height: 30px;
   color: inherit;
-  background-color: #eeeeee;
+  background: url("../img/8.jpg");
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
